cert-manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mrncloud.com
      secretName: mrncloud-com-cert
  rules:
    - host: "mrncloud.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx
                port:
                  number: 80
